--- a/index.html
+++ b/index.html
@@ -7,6 +7,142 @@
     <title>Home</title>
 </head>
 <body>
-    <h2>My portfolio</h2>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <span class="navbar-brand mb-0 h1" style="letter-spacing: 1px;"><span><img src="/images/IAN-2.png"
+                        alt="girl" height="50px" width="50px"></span><span class="name"> IFFAT AMIN <span
+                        class="colour">NABILA</span></span></span>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0" style="letter-spacing: 1px;">
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Content</a>
+                    </li>
+                </ul>
+            </div>
+    </nav>
+
+
+    <div class="container-fluid">
+        <div class="background">
+            <div class="row">
+                <div class="col-sm-auto bg-light me-auto">
+                    <div class="d-flex flex-sm-column flex-row flex-nowrap bg-light align-items-center ">
+
+                        <ul
+                            class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center align-items-center">
+                            <li class="nav-item">
+                                <a href="#" class="nav-link py-3 px-2 link-dark text-decoration-none" title=""
+                                    data-bs-toggle="tooltip" data-bs-placement="right"
+                                    data-bs-original-title="LinkedIn">
+                                    <i class="fa-brands fa-linkedin"></i>
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="#" class="nav-link py-3 px-2 link-dark text-decoration-none" title=""
+                                    data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Github">
+                                    <i class="fa-brands fa-github"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link py-3 px-2 link-dark text-decoration-none" title=""
+                                    data-bs-toggle="tooltip" data-bs-placement="right"
+                                    data-bs-original-title="Facebook">
+                                    <i class="fa-brands fa-facebook"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link py-3 px-2 link-dark text-decoration-none" title=""
+                                    data-bs-toggle="tooltip" data-bs-placement="right"
+                                    data-bs-original-title="Instagram">
+                                    <i class="fa-brands fa-square-instagram"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#" class="nav-link py-3 px-2 link-dark text-decoration-none" title=""
+                                    data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Youtube">
+                                    <i class="fa-brands fa-youtube"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="container-fluid text-center justify-content-center" style="height: 100vh;">
+                <h3 class=" title ">
+                    Hey I'm IFFAT AMIN NABILA
+                </h3>
+                <p class="para r">
+                    <small class="text-muted">A Frontend focused Web Developer <br>building the Frontend of Websites and
+                        Web Applications that <br>leads to the success of the overall product</small>
+                </p>
+                <a class="btn btn-primary btn-lg" href="#" role="button"
+                    style="background-color: #7843e9 ;width: 150px;">Projects</a>
+            </div>
+        </div>
+        <div class="container-fluid text-center justify-content-center" style="height: 50vh;">
+            <h2 class="title_2">
+                About Me!
+            </h2>
+            <p class="para r">
+                <small class="text-muted">Here you will find more information about me, <br>what I do, and my current
+                    skills mostly in terms of programming and technology</small>
+            </p>
+        </div>
+        <div class="container-fluid ">
+            <div class="row justify-content-between">
+                <div class="col-md-6 ">
+                    <!-- Content for the first column -->
+                    <h2>Get to know me !</h2>
+                    <p>I'm a <mark>Frontend Web Developer</mark> building the Front-end of Websites<br> and Web
+                        Applications<br> that leads to the success of the overall product.<br>Check out some of my work
+                        in the Projects section.
+
+                        I also like sharing content related to the stuff <br> I have learned over the years <br>in Web
+                        Development so it can help other people of the Dev Community. <br>Feel free to Connect or Follow
+                        me on my Linkedin where<br> I post useful content related to Web Development and Programming
+
+                        I'm open to Job opportunities where I can contribute, <br>learn and grow. If you have a good
+                        opportunity that matches my skills and <br>experience then don't hesitate to contact me.</p>
+                </div>
+                <div class="col-md-6 ">
+                    <!-- Content for the second column -->
+                    <h2>My skills</h2>
+                    <div>
+                        <div class="skill text-center justify-content-center">HTML</div>
+                        <div class="skill text-center justify-content-center">CSS</div>
+                        <div class="skill text-center justify-content-center">Javascript</div>
+                        <div class="skill text-center justify-content-center">Jquery</div>
+                        <div class="skill text-center justify-content-center">React</div>
+                        <div class="skill text-center justify-content-center">Bootstrap</div>
+                    </div>
+                    <div>
+                        <div class="skill text-center justify-content-center">Mysql</div>
+                        <div class="skill text-center justify-content-center">Oracle</div>
+                        <div class="skill text-center justify-content-center">C#</div>
+                        <div class="skill text-center justify-content-center">Java</div>
+                        <div class="skill text-center justify-content-center">PHP</div>
+                        <div class="skill text-center justify-content-center">Python</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
