--- a/projects/sample-portfolio/index.html
+++ b/projects/sample-portfolio/index.html
@@ -14,7 +14,7 @@
         <div class="container row justify-content-space-between">
             <div class="left-menu">
                 <div class="container pl-12">
-                    <img class="avatar" src="/images/avatar.png" alt="Avatar">&nbsp;IFFAT NABILA
+                    <img class="avatar" src="./images/avatar.png" alt="Avatar">&nbsp;IFFAT NABILA
 
                 </div>
             </div>
@@ -28,9 +28,9 @@
 
                 <div class="mobile-menu">
                     <div class="row justify-content-right header__main-ham-menu-cont pr-16" onclick="toggleMenu()">
-                        <img src="/images/ham-menu.svg" alt="hamburger menu" id="menu-open"
+                        <img src="./images/ham-menu.svg" alt="hamburger menu" id="menu-open"
                             class="header__main-ham-menu">
-                        <img src="/images/ham-menu-close.svg" alt="hamburger menu close" id="menu-close"
+                        <img src="./images/ham-menu-close.svg" alt="hamburger menu close" id="menu-close"
                             class="header__main-ham-menu-close d-none">
                     </div>
                 </div>
@@ -77,9 +77,9 @@
         </div>
 
         <div class="position-absolute hero-social p-16">
-            <a href="https://www.linkedin.com/in/iffataminnabila/" class="linkedin"><img src="/images/Logo-Linkedin.svg" alt="Logo Linkedin"></a>
-            <a href="https://github.com/Iffat-Amin"><img src="/images/Logo-Github.svg" alt="Logo Github"></a>
-            <a href="https://www.youtube.com/@iffatnabila194" class="youtube"><img src="/images/Logo-Youtube.svg"
+            <a href="https://www.linkedin.com/in/iffataminnabila/" class="linkedin"><img src="./images/Logo-Linkedin.svg" alt="Logo Linkedin"></a>
+            <a href="https://github.com/Iffat-Amin"><img src="./images/Logo-Github.svg" alt="Logo Github"></a>
+            <a href="https://www.youtube.com/@iffatnabila194" class="youtube"><img src="./images/Logo-Youtube.svg"
                     alt="Logo Youtube"></a>
         </div>
 
@@ -119,23 +119,23 @@
             <div class="col-12 col-sm-6 p-16 pl-84 my-skills">
                 <h3 class="pb-24">My Skills!</h3>
                 <div id="skills" class="skills-container row">
-                    <div> <img src="/images/html-logo.png" alt="" width="22px"><span>&nbsp;HTML</span></div>
-                    <div> <img src="/images/css-logo.png" alt="" width="25px"><span>&nbsp;CSS</span></div>
-                    <div> <img src="/images/js-logo.png" alt="" width="20px"><span>&nbsp;JavaScript</span></div>
-                    <div> <img src="/images/typescript-logo.png" alt="" width="20px"><span>&nbsp;TypeScript</span></div>
-                    <div> <img src="/images/java-logo.png" alt="" width="25px"><span>&nbsp;Java</span></div>
-                    <div> <img src="/images/angular-logo.png" alt="" width="20px"><span>&nbsp;Angular</span></div>
-                    <div> <img src="/images/react-logo.png" alt="" width="20px"><span>&nbsp;React</span></div>
-                    <div> <img src="/images/nodejs-logo.png" alt="" width="20px"><span>&nbsp;NodeJS</span></div>
-                    <div> <img src="/images/MongoDb-logo.png" alt="" width="15px"><span>&nbsp;MongoDB</span></div>
-                    <div> <img src="/images/spring-boot-logo.png" alt="" width="20px"><span>&nbsp;Spring Boot</span>
+                    <div> <img src="./images/html-logo.png" alt="" width="22px"><span>&nbsp;HTML</span></div>
+                    <div> <img src="./images/css-logo.png" alt="" width="25px"><span>&nbsp;CSS</span></div>
+                    <div> <img src="./images/js-logo.png" alt="" width="20px"><span>&nbsp;JavaScript</span></div>
+                    <div> <img src="./images/typescript-logo.png" alt="" width="20px"><span>&nbsp;TypeScript</span></div>
+                    <div> <img src="./images/java-logo.png" alt="" width="25px"><span>&nbsp;Java</span></div>
+                    <div> <img src="./images/angular-logo.png" alt="" width="20px"><span>&nbsp;Angular</span></div>
+                    <div> <img src="./images/react-logo.png" alt="" width="20px"><span>&nbsp;React</span></div>
+                    <div> <img src="./images/nodejs-logo.png" alt="" width="20px"><span>&nbsp;NodeJS</span></div>
+                    <div> <img src="./images/MongoDb-logo.png" alt="" width="15px"><span>&nbsp;MongoDB</span></div>
+                    <div> <img src="./images/spring-boot-logo.png" alt="" width="20px"><span>&nbsp;Spring Boot</span>
                     </div>
-                    <div> <img src="/images/scrum-logo.png" alt="" width="20px"><span>&nbsp;Scrum</span></div>
-                    <div> <img src="/images/mysql-logo.png" alt="" width="20px"><span>&nbsp;MySQL</span></div>
-                    <div> <img src="/images/oracle-logo.png" alt="" width="20px"><span>&nbsp;Oracle</span></div>
-                    <div> <img src="/images/php-logo.png" alt="" width="25px"><span>&nbsp;PHP</span></div>
-                    <div> <img src="/images/docker-logo.png" alt="" width="22px"><span>&nbsp;Docker</span></div>
-                    <div> <img src="/images/Jenkins-logo.png" alt="" width="22px"><span>&nbsp;Jenkins</span></div>
+                    <div> <img src="./images/scrum-logo.png" alt="" width="20px"><span>&nbsp;Scrum</span></div>
+                    <div> <img src="./images/mysql-logo.png" alt="" width="20px"><span>&nbsp;MySQL</span></div>
+                    <div> <img src="./images/oracle-logo.png" alt="" width="20px"><span>&nbsp;Oracle</span></div>
+                    <div> <img src="./images/php-logo.png" alt="" width="25px"><span>&nbsp;PHP</span></div>
+                    <div> <img src="./images/docker-logo.png" alt="" width="22px"><span>&nbsp;Docker</span></div>
+                    <div> <img src="./images/Jenkins-logo.png" alt="" width="22px"><span>&nbsp;Jenkins</span></div>
                 </div>
             </div>
         </div>
@@ -187,7 +187,7 @@
     <!-- Project Image & Overview -->
     <div class="capstone-content">
         <div class="capstone-image">
-            <img src="/images/careconnect-capstone.png" alt="CareConnect Medical Booking System">
+            <img src="./images/careconnect-capstone.png" alt="CareConnect Medical Booking System">
         </div>
 
         <h3 class="pb-16">CareConnect Medical Appointment Booking System</h3>
@@ -255,7 +255,7 @@
         <!-- Project 1 -->
         <div class="project-card">
             <div class="project-image">
-                <img src="/images/Foodfolio.png" alt="Project 1">
+                <img src="./images/Foodfolio.png" alt="Project 1">
                 <div class="overlay">
                     <p>a personal restaurant guide Android application, enabling users to explore, save, and manage their favorite dining spots with an intuitive and responsive user interface.</p>
                     <a href="https://github.com/ammar-sultan/FoodFolio-Prototype/tree/main" target="_blank" class="project-link">🔗 View Code</a>
@@ -267,7 +267,7 @@
         <!-- Project 2 -->
         <div class="project-card">
             <div class="project-image">
-                <img src="/images/Learning Path.png" alt="Project 2">
+                <img src="./images/Learning Path.png" alt="Project 2">
                 <div class="overlay">
                     <p>Mostly worked on frontend. Built the whole website base with HTML, CSS and JavaScript </p>
                     <a href="https://github.com/Iffat-Amin/learning-path-site" target="_blank" class="project-link">🔗 View Code</a>
@@ -279,7 +279,7 @@
         <!-- Project 3 -->
         <div class="project-card">
             <div class="project-image">
-                <img src="/images/Wanderlust.png" alt="Project 3">
+                <img src="./images/Wanderlust.png" alt="Project 3">
                 <div class="overlay">
                     <p>An user-friendly and responsive frontend website for a travel application, ensuring optimal user experience and functionality across various devices.</p>
                     <a href="https://github.com/iffat-nabila/careconnect" target="_blank" class="project-link">🔗 View Code</a>
@@ -291,7 +291,7 @@
         <!-- Project 4 -->
         <div class="project-card">
             <div class="project-image">
-                <img src="/images/ShoppingList.png" alt="Project 4">
+                <img src="./images/ShoppingList.png" alt="Project 4">
                 <div class="overlay">
                     <p>A shopping list app with tax calculations and categorized items.</p>
                     <a href="https://github.com/Iffat-Amin/ShoppingListApp" target="_blank" class="project-link">🔗 View Code</a>
@@ -321,10 +321,10 @@
                     <p class="footer-heading text-transform-uppercase fw-600">Social</p>
                     <div class="footer-icon">
                         <a href="https://www.linkedin.com/in/iffataminnabila/ class="linkedin"><img
-                                src="/images/linkedin-ico.png" alt="Logo Linkedin"></a>
-                        <a href="https://github.com/Iffat-Amin"><img src="/images/github-ico.png"
+                                src="./images/linkedin-ico.png" alt="Logo Linkedin"></a>
+                        <a href="https://github.com/Iffat-Amin"><img src="./images/github-ico.png"
                                 alt="Logo Github"></a>
-                        <a href="https://www.youtube.com/@iffatnabila194" class="youtube"><img src="/images/yt-ico.png"
+                        <a href="https://www.youtube.com/@iffatnabila194" class="youtube"><img src="./images/yt-ico.png"
                                 alt="Logo Youtube"></a>
                     </div>
                 </div>
