--- a/projects/sample-portfolio/index.html
+++ b/projects/sample-portfolio/index.html
@@ -107,7 +107,7 @@
         <div class="row p-16">
             <div class="col-12 col-sm-6 p-16 pr-36 mb-36">
                 <h3 class="pb-24">Get to know me!</h3>
-                <p class="pb-16">Experienced in both functional and OOP. Proficient in Java, C#, JavaScript, TypeScript.
+                <p class="pb-16">Experienced in both functional and OOP. Proficient in HTML, CSS, JavaScript, TypeScript , React and Angular.
                 </p>
                 <p class="mb-16">I am open to new opportunities where I can contribute and expand my knowledge. </p>
 
